# test-results-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: junit.rs  lib.rs  raw_upload.rs  testrun.rs  validated_string.rs
src/snapshots/: test_results_parser__raw_upload__tests__parse_raw_upload_success@warnings-junit.xml.snap
tests/: test_junit.py
tests/snapshots/: parse_raw_upload__TestParsers__junit__1.json
