[package]
name = "test_results_parser"
version = "0.5.1"
edition = "2021"

[lib]
name = "test_results_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2.6.0"
# Version 0.23 currently suffers from https://github.com/PyO3/pyo3/issues/4723
pyo3 = { version = "0.22.6", features = ["abi3-py312"] }
quick-xml = "0.37.1"
regex = "1.11.1"
rinja = "0.3.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
watto = { version = "0.1.0", features = ["writer", "strings"] }
