[package]
name = "test_results_parser"
version = "0.5.1"
edition = "2021"

[lib]
name = "test_results_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2.6.0"
# Version 0.23 currently suffers from https://github.com/PyO3/pyo3/issues/4723
pyo3 = { version = "0.22.6", features = ["abi3-py312"] }
quick-xml = "0.37.1"
regex = "1.11.1"
rinja = "0.3.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smallvec = "2.0.0-alpha.7"
thiserror = "2.0.3"
watto = { version = "0.2.0", features = ["writer", "strings"] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
debug = 1

[[bench]]
name = "binary"
harness = false
